Fix the border stylings Fix the alert details page header wrapping issue

--- a/openmetadata-ui/src/main/resources/ui/src/components/Database/TableQueries/table-queries.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Database/TableQueries/table-queries.style.less
@@ -50,3 +50,12 @@
     padding: unset;
   }
 }
+
+.query-placeholder-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid @border-color;
+  border-radius: @border-radius-sm;
+  padding: 64px 0px;
+}
