--- a/openmetadata-ui/src/main/resources/ui/src/components/Settings/Services/Ingestion/MetadataAgentsWidget/metadata-agents-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Settings/Services/Ingestion/MetadataAgentsWidget/metadata-agents-widget.less
@@ -15,7 +15,7 @@
 .metadata-agents-widget.ant-card {
   height: 100%;
   background-color: @white;
-  border-color: @grey-12;
+  border-color: @blue-15;
   border-radius: @border-radius-sm;
   padding: 0px;
 
@@ -36,7 +36,7 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
-    border: 1px solid @border-color;
+    border: 1px solid @blue-15;
     border-radius: 18px;
     height: fit-content;
   }
