--- a/openmetadata-ui/src/main/resources/ui/src/styles/variables.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/variables.less
@@ -137,7 +137,7 @@
 @margin-xlg: 48px;
 @body-bg-color: #f8f9fa;
 @body-dark-bg-color: #f1f1f3;
-@border-color: #0000001a;
+@border-color: @blue-15;
 @border-color-1: #e9eaeb;
 @border-color-2: #d5d7da;
 @border-color-3: #d4d4d8;
